force-app/main/default/objects/Directive_Work_Item__c/Directive_Work_Item__c.object-meta.xml
<CustomObject>
    <description>Directive Work Item</description>
    <label>Work Item</label>
    <nameField>
        <displayFormat>WI-{0000000}</displayFormat>
        <label>Work Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>