force-app/main/default/objects/Directive_Work_Item__c/fields/Assigned_Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Queue_Id__c</fullName>
    <label>Assigned Queue Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>