force-app/main/default/objects/Directive_Work_Item__c/fields/Assigned_User__c.field-meta.xml
<CustomField>
    <fullName>Assigned_User__c</fullName>
    <label>Assigned User</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Assigned Work Items</relationshipLabel>
    <relationshipName>Assigned_Work_Items</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>