force-app/main/default/objects/Directive_Work_Item__c/fields/Business_Impact__c.field-meta.xml
<CustomField>
    <fullName>Business_Impact__c</fullName>
    <label>Business Impact</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>