force-app/main/default/objects/Directive_Work_Item__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Revenue</fullName><default>false</default><label>Revenue</label></value>
            <value><fullName>Customer</fullName><default>false</default><label>Customer</label></value>
            <value><fullName>Service</fullName><default>false</default><label>Service</label></value>
            <value><fullName>Data</fullName><default>false</default><label>Data</label></value>
            <value><fullName>AI</fullName><default>false</default><label>AI</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>