force-app/main/default/objects/Directive_Work_Item__c/fields/Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Completed_By__c</fullName>
    <label>Completed By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Completed Work Items</relationshipLabel>
    <relationshipName>Completed_Work_Items</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>