force-app/main/default/objects/Directive_Work_Item__c/fields/Context_JSON__c.field-meta.xml
<CustomField>
    <fullName>Context_JSON__c</fullName>
    <label>Context JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>