force-app/main/default/objects/Directive_Work_Item__c/fields/Last_Evaluated_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Evaluated_At__c</fullName>
    <label>Last Evaluated At</label>
    <type>DateTime</type>
</CustomField>