force-app/main/default/objects/Directive_Work_Item__c/fields/Reason_Codes__c.field-meta.xml
<CustomField>
    <fullName>Reason_Codes__c</fullName>
    <label>Reason Codes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>