force-app/main/default/objects/Directive_Work_Item__c/fields/Source_Record_Label__c.field-meta.xml
<CustomField>
    <fullName>Source_Record_Label__c</fullName>
    <label>Source Record Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>