force-app/main/default/objects/Directive_Work_Item__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>New</fullName><default>true</default><label>New</label></value>
            <value><fullName>In_Progress</fullName><default>false</default><label>In_Progress</label></value>
            <value><fullName>Waiting</fullName><default>false</default><label>Waiting</label></value>
            <value><fullName>Snoozed</fullName><default>false</default><label>Snoozed</label></value>
            <value><fullName>Completed</fullName><default>false</default><label>Completed</label></value>
            <value><fullName>Dismissed</fullName><default>false</default><label>Dismissed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>