force-app/main/default/objects/Directive_Work_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>SLA_Risk</fullName><default>false</default><label>SLA_Risk</label></value>
            <value><fullName>Critical_Case</fullName><default>false</default><label>Critical_Case</label></value>
            <value><fullName>High_Value_At_Risk</fullName><default>false</default><label>High_Value_At_Risk</label></value>
            <value><fullName>Repeated_Response</fullName><default>false</default><label>Repeated_Response</label></value>
            <value><fullName>Escalation</fullName><default>false</default><label>Escalation</label></value>
            <value><fullName>Agent_Failure</fullName><default>false</default><label>Agent_Failure</label></value>
            <value><fullName>Routing_Anomaly</fullName><default>false</default><label>Routing_Anomaly</label></value>
            <value><fullName>Knowledge_Gap</fullName><default>false</default><label>Knowledge_Gap</label></value>
            <value><fullName>Approval</fullName><default>false</default><label>Approval</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>