force-app/main/default/objects/Directive_Work_Item__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Version</label>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
    <defaultValue>1</defaultValue>
</CustomField>